log/HamamatsuApp_log_181109_112008.txt
2018-11-09T11:20:08|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\Users\Admin\Desktop\Camera-ScopeFoundry\CameraApp.py", line 26, in <module>
    app = HamamatsuApp(sys.argv)
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\Users\Admin\Desktop\Camera-ScopeFoundry\CameraApp.py", line 14, in setup
    from CameraMeasurement import HamamatsuMeasurement
  File "C:\Users\Admin\Desktop\Camera-ScopeFoundry\CameraMeasurement.py", line 83
    self.camera.hamamatsu.stopAcquisition()
       ^
SyntaxError: invalid syntax

